cot/tests/db_testing/snapshots/migrations/cot__db__migrations__graph_export__tests__migration_graph_mermaid_single_app.snap
---
source: cot/src/db/migrations/graph_export.rs
expression: mermaid
---
%%{init: {'theme': 'base', 'themeVariables': {'background': 'transparent'}}}%%
flowchart LR
  classDef migration fill:#eef2ff,stroke:#4c51bf,stroke-width:1px,color:#1e1b4b,font-size:12px,rx:6,ry:6;

  subgraph cluster0["app1"]
    n0["m_0001_initial"]
    n1["m_0002_second"]
    n2["m_0003_third"]
  end

  n0 --> n1
  n1 --> n2

  class n0,n1,n2 migration;
  style cluster0 fill:#f9fafb,stroke:#d1d5db,stroke-width:1px
  linkStyle default stroke:#9aa5b1,stroke-width:1.5px
